Added image modal / prevent scrolling while image modal is open

--- a/src/components/HorizontalScroll.css
+++ b/src/components/HorizontalScroll.css
@@ -6,3 +6,9 @@
 .slick-dots li.slick-active button:before {
     color: #697565; 
 }
+
+/* PREVENT SCROLL */
+.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
